--- a/views/resume/resume001.html
+++ b/views/resume/resume001.html
@@ -19,12 +19,14 @@
     <link href="../../static/resume/resume001/css/magnific-popup.css" rel="stylesheet">
     <link href="../../static/resume/resume001/css/style.css" rel="stylesheet">
     <link href="../../static/resume/resume001/css/responsive.css" rel="stylesheet">
+    <!--require start-->
     <link rel="stylesheet" href="../../static/css/util.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.css">
     <script src="../../static/plugins/sewwtalert/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://cdn.staticfile.org/awesome-bootstrap-checkbox/v0.2.3/awesome-bootstrap-checkbox.min.css">
     <link href="https://cdn.bootcss.com/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/bootstrap-slider/10.2.1/css/bootstrap-slider.min.css" rel="stylesheet">
+    <!--require end-->
     <style>
         input:focus{
             outline: 0 !important;
@@ -73,28 +75,28 @@
     <div class="menu-wrap" style="overflow: hidden">
         <nav class="menu" style="overflow: hidden">
             <div class="menu-list" style="overflow: hidden;margin-top: 40px;">
-                <a data="home" href="javascript:adimate('home')" class="active" >
+                <a data="home" href="javascript:animate('home')" class="active" >
                     主页
                 </a>
-                <a data="about" href="javascript:adimate('about')">
+                <a data="about" href="javascript:animate('about')">
                     我的简介
                 </a>
-                {{/*<a data="work" href="javascript:adimate('work')">
+                {{/*<a data="work" href="javascript:animate('work')">
                     我的作品
                 </a>*/}}
-                <a data="employment" href="javascript:adimate('employment')">
+                <a data="employment" href="javascript:animate('employment')">
                     工作经历
                 </a>
-                <a data="skill" href="javascript:adimate('skill')">
+                <a data="skill" href="javascript:animate('skill')">
                     所有技能
                 </a>
-                <a data="education" href="javascript:adimate('education')">
+                <a data="education" href="javascript:animate('education')">
                     教育经历
                 </a>
-                <a data="testimonial" href="javascript:adimate('testimonial')">
+                <a data="testimonial" href="javascript:animate('testimonial')">
                     人生箴言
                 </a>
-                <a data="contact" href="javascript:adimate('contact')">
+                <a data="contact" href="javascript:animate('contact')">
                     与我联系
                 </a>
             </div>
@@ -505,7 +507,10 @@
                     <div class="col-md-9 content-right">
                         <form onsubmit="return checkLength()">
                             <div class="group">
-                                <input id="contact-company"  type="text"><span class="highlight"></span><span class="bar"></span><label>公司名/您的称谓</label>
+                                <input id="contact-company"  type="text"><span class="highlight"></span><span class="bar"></span><label>企业/公司名</label>
+                            </div>
+                            <div class="group">
+                                <input id="contact-name"  type="text"><span class="highlight"></span><span class="bar"></span><label>您的称谓</label>
                             </div>
                             <div class="group">
                                 <input id="contact-email"  type="text"><span class="highlight"></span><span class="bar"></span><label>邮箱地址</label>
@@ -545,7 +550,7 @@
     <!--/.CONTENT-WRAP END-->
 </div>
 
-<div id="submitTip" style="width: 100%;height: 200px;text-align: center;position: fixed;bottom: 0px;background:#333333;z-index: 9999;display: none;">
+<div id="submitTip" style="width: 100%;height: 200px;text-align: center;position: fixed;bottom: 0px;background:#333333;z-index: 1047;display: none;">
     <div id="footerTip" style="color: #ffffff;font-size: 23px;margin-top: 70px;">提交已填写信息即可在线查看简历</div>
     <button id="submit" class="btn btn-primary" onclick="submit()" style="margin-top: 6px;background: #6397ff">上传信息</button>
 </div>
@@ -825,21 +830,24 @@
 <script src="../../static/resume/resume001/js/smooth-scroll.min.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/typed.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/main.js" type="text/javascript"></script>
+<!--require start-->
 <script src="../../static/js/util.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap-slider/10.2.1/bootstrap-slider.min.js"></script>
 <script src="../../static/plugins/citySelect/distpicker.data.js"></script>
 <script src="../../static/plugins/citySelect/distpicker.js"></script>
 <script src="../../static/plugins/qrcode/qrcode.min.js"></script>
 <script src="../../static/js/resume.js"></script>
+<!--require end-->
 <script>
     dbData = {{.dbData}};
     $('#sendMessage').on('click',function () {
         var url = window.location.href;
-        if(url.indexOf("share")==0){
-            swal("即刻提示","模板状态[与我联系]功能不可用!","error");
+        if(url.indexOf("share")<1){
+            swal("即刻提示","模板状态[与我联系]功能不可用喔","error");
             return
         }else{
             var company = $('#contact-company').val().trim();
+            var name = $('#contact-name').val().trim();
             var email = $('#contact-email').val().trim();
             var message = $('#contact-message').val().trim();
             if(!company||!email||!message){
@@ -847,7 +855,7 @@
                 return
             }
             var sid = GetQueryString("v");
-            $.post("/resume/send2mail",{_xsrf:$('#token').val(),sid:sid,company:company,email:email,message:message},function (r) {
+            $.post("/resume/send2mail",{_xsrf:$('#token').val(),sid:sid,company:company,name:name,email:email,message:message},function (r) {
                 if(r.code==1){
                     swal("即刻提示",r.msg,"success");
                 }else{
