--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,9 @@
     <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/responsive.css">
 
+    <link href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+
     <style>
         @font-face {
             font-family: Panxiang;
@@ -489,10 +492,11 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="newsletter-right" >
-                        <div class="newsletter-right-inner">
-                            <form onsubmit="return checkLength()">
-                                <input type="text" name="newsletter" placeholder="手机号/邮箱">
-                                <input style="font-family: Panxiang;" type="submit" value="提交">
+                        <div class="newsletter-right-inner" >
+                            <form onsubmit="return checkLength()" style="margin-top: -20px;">
+                                <input type="text" id="contact-input"  placeholder="邮箱/手机号">
+                                <input type="text" id="message"  placeholder="留言信息" style="margin-top: 5px;">
+                                <input style="font-family: Panxiang;margin-top: 20px;" id="submit" type="button" value="提交" >
                             </form>
                         </div>
                     </div>
@@ -578,34 +582,8 @@
     <script>
 
         $(function () {
-            var flag = isMobile.any();
-            if (flag) {
-                $('#wechat').on("click", function () {
-                    var isHiden = $('#wechat-alert').is(":hidden");
-                    if (isHiden) {
-                        $('#wechat-alert').fadeIn(500);
-                    } else {
-                        $('#wechat-alert').fadeOut(500);
-                    }
-                });
-
-                $('.img-opacity').css("opacity", 1);
-            } else {
-                $("#wechat").hover(
-                        function () {
-                            var $div = $(this);
-                            t = setInterval(function () {
-                                $('#wechat-alert').fadeIn(500);
-                            }, 100);
-                        }, function () {
-                            clearInterval(t);
-                            $('#wechat-alert').fadeOut(500);
-                        })
-            }
-
             //获取模板列表
             $.post("/index/resume/list", {_xsrf: $("#token").val()}, function (r) {
-                console.log(r.data);
                 var arr = r.data;
                 $('#work-grid').html("");
                 for(var i=0;i<arr.length;i++){
@@ -646,6 +624,25 @@
                             '                        </div>\n' +
                             '                    </div>')
                 }
+            });
+
+            $('#submit').on("click",function () {
+               var contact = $('#contact-input').val().trim();
+               var message = $('#message').val().trim();
+               if(!contact||!message){
+                   swal("即刻提示","您似乎忘了填些什么:(","error");
+                   return
+               }else{
+                   $.post("/index/mail4index",{_xsrf:$('#token').val(),contact:contact,message:message},function (r) {
+                        if(r.code===1){
+                            $('#contact-input').val("");
+                            $('#message').val("")
+                            swal("即刻提示","您的留言信息我们已收到,将尽快与您联系:)","success");
+                        }else{
+                            swal("即刻提示","服务器貌似开小差了,稍后再试吧:(","error");
+                        }
+                   });
+               }
             });
 
         });
