完成消息页及忘记密码操作

--- a/views/main/home.html
+++ b/views/main/home.html
@@ -59,7 +59,7 @@
             bottom:16px;
             color: #ffffff;
             font-size: 18px;
-            background: rgba(245,124,0,0.75);
+            background: rgba(245, 58, 0, 0.75);
             padding-top: 15px;
             padding-bottom: 14px;
         }
