--- a/views/login/login.html
+++ b/views/login/login.html
@@ -11,7 +11,7 @@
 
     <!--Sweet alert-->
     <link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.css">
-    <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
+    <script src="../../static/plugins/sweetalert/sweetalert.min.js"></script>
 	<!-- VENDOR CSS -->
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -117,7 +117,7 @@
 								</div>
 								<button type="button" id="loginBtn" style="background: #333333c7;border: none" class="btn btn-primary btn-lg btn-block">登录</button>
 								<div class="bottom">
-									<span class="helper-text"><i class="fa fa-lock"></i> <a href="javascript:void(0);">忘记密码?</a></span>
+									<span class="helper-text"><i class="fa fa-lock"></i> <a href="javascript:forget();">忘记密码?</a></span>
 								</div>
 							</form>
 						</div>
@@ -270,6 +270,92 @@
 
             })
         });
+		function forget() {
+            swal({
+                title: "<h3>请输入预留邮箱地址</h3>",
+                text: "<input  type='text' id='email'>",
+                html:true,
+                showCancelButton: true,
+                closeOnConfirm: true,
+                confirmButtonColor: "#6397ff",
+                confirmButtonText: "提交",
+                cancelButtonText: "取消",
+                animation: "slide-from-top",
+                type: "prompt",
+                inputPlaceholder:"邮箱地址"
+            }, function(){
+                var email = $('#email').val().trim();
+                if(!email){
+                    setTimeout(function () {
+                        swal("即刻提示","您似乎什么都没填","error");
+                    },200);
+                    return
+                }
+                if(!checkEmail(email)){
+                    setTimeout(function () {
+                        swal("即刻提示","邮箱格式好像不正确","error");
+                    },200);
+                    return
+                }
+
+                $.post('/forget',{_xsrf:$('#token').val(),email:email},function (r) {
+                    if(r.code===1){
+                        setTimeout(function () {
+                            swal({
+                                title: "<h3>请输入验证码和密码</h3>",
+                                text: "<input style='text-align: center' id='code' placeholder='验证码' type='text' maxlength='6'>"+"<input placeholder='至少6个字符密码' style='text-align: center' type='password' id='ePassword' maxlength='40'>"+"",
+                                html:true,
+                                showCancelButton: true,
+                                closeOnConfirm: true,
+                                confirmButtonColor: "#6397ff",
+                                confirmButtonText: "提交",
+                                cancelButtonText: "取消",
+                                animation: "slide-from-top",
+                                type: "prompt",
+                                inputPlaceholder:"6位数验证码"
+                            }, function(){
+                                var password = $('#ePassword').val().trim();
+                                var code = $('#code').val().trim();
+                                if(!password){
+                                    setTimeout(function () {
+                                        swal("即刻提示","您未填写密码!","error");
+                                    },200);
+                                    return
+                                }
+                                if(password.length<6){
+                                    setTimeout(function () {
+                                        swal("即刻提示","密码过简单了!","error");
+                                    },200);
+                                    return
+                                }
+                                if(!code){
+                                    setTimeout(function () {
+                                        swal("即刻提示","验证码不能为空!","error");
+                                    },200);
+                                    return
+                                }
+                                $.post("/reset",{_xsrf:$('#token').val(),email:email,password:password,code:code},function (r) {
+                                    if(r.code===1){
+                                        setTimeout(function () {
+                                            swal("即刻提示",r.msg,"success");
+                                        },200);
+                                    }else{
+                                        setTimeout(function () {
+                                            swal("即刻提示",r.msg,"error");
+                                        },200);
+                                    }
+                                })
+                            });
+                        },200);
+
+                    }else{
+                        setTimeout(function () {
+                            swal("即刻提示",r.msg,"error");
+                        },200);
+                    }
+                })
+            });
+        }
 	</script>
 </body>
 
