--- a/views/main/index.html
+++ b/views/main/index.html
@@ -74,8 +74,8 @@
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="../../static/img/avatar.png" style="width: 35px;" class="avatar" alt="Avatar"> <span id="account">{{.account}}</span> <i class="icon-submenu lnr lnr-chevron-down"></i></a>
 							<ul class="dropdown-menu">
-								<li><a href="javascript:redirect('profile',this)"><i class="lnr lnr-user"></i> <span>个人设置</span></a></li>
-								<li><a href="javascript:redirect('news',this)"><i class="lnr lnr-envelope"></i> <span>消息提醒</span></a></li>
+								<li><a href="javascript:$('#profileSetting').click();"><i class="lnr lnr-user"></i> <span>个人设置</span></a></li>
+								<li><a href="javascript:$('#message').click();"><i class="lnr lnr-envelope"></i> <span>消息提醒</span></a></li>
 								<li><a href="javascript:void(0);"><i class="lnr lnr-cog"></i> <span>系统设置</span></a></li>
 								<li><a href="/timeout"><i class="lnr lnr-exit"></i> <span>退出</span></a></li>
 							</ul>
@@ -98,8 +98,8 @@
                         <li id="made" onclick="redirect('mades',this)"><i class="lnr lnr-hand"></i> <span>我的制作</span></li>
 						{{/*<li onclick="redirect('views',this)"><i class="lnr lnr-eye"></i> <span>我的查看</span></li>
 						<li onclick="redirect('likes',this)"><i class="lnr lnr-heart"></i> <span>我的喜欢</span></li>*/}}
-						<li onclick="redirect('news',this)"><i class="lnr lnr-envelope"></i> <span>消息提醒</span></li>
-						<li onclick="redirect('profile',this)"><i class="lnr lnr-user"></i> <span>个人设置</span></li>
+						<li id="message" onclick="redirect('news',this)"><i class="lnr lnr-envelope"></i> <span>消息提醒</span></li>
+						<li id="profileSetting" onclick="redirect('profile',this)"><i class="lnr lnr-user"></i> <span>个人设置</span></li>
 						<li style="display: none" id="last" onclick="redirect('',this)">
 							<a href="#subPages"  data-toggle="collapse" class="collapsed"><i class="lnr lnr-inbox"></i> <span>基础信息</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
 							<div id="subPages" class="collapse " style="margin-top: 8px;">
