--- a/views/main/profile.html
+++ b/views/main/profile.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../static/css/root.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/awesome-bootstrap-checkbox/v0.2.3/awesome-bootstrap-checkbox.min.css">
     <link href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" rel="stylesheet">
-    <script src="../../static/plugins/sewwtalert/sweetalert.min.js"></script>
+    <script src="../../static/plugins/sweetalert/sweetalert.min.js"></script>
     <style>
         .red{
             color:red;
@@ -55,7 +55,7 @@
         <h3 class="panel-title">个人设置</h3>
         <hr>
     </div>
-    <div class="panel-body" style="padding-bottom: 6%">
+    <div class="panel-body" style="padding-bottom: 6%;margin-top: -25px;">
         <div class="row" >
             <div class="col-md-12" >
                 <form class="form-horizontal" autocomplete="off">
@@ -251,9 +251,9 @@
                 success:function (r) {
                     if(r.code===1){
                         renderForm();
-                        swal("即刻提示",r.msg,"success");
+                        parentWin.swalInfo("即刻提示",r.msg,"success");
                     }else{
-                        swal("即刻提示",r.msg,"error");
+                        parentWin.swalInfo("即刻提示",r.msg,"error");
                     }
                 },
                 complete:function () {
