--- a/static/css/util.css
+++ b/static/css/util.css
@@ -198,3 +198,37 @@
 .loaderTxt{
     color: #fff;font-size: 16px;margin-top: 15px;
 }
+/*picker color---start*/
+body .color-picker-wrap {
+    background: #ffffff;
+    border-radius: 0 5px 5px 0;
+    height: 400px;
+    padding: 20px 25px;
+    position: fixed;
+    top: 100px;
+    width: 270px;
+    left: -270px;
+    z-index: 999;
+    border: 1px solid #eee;
+    -moz-transition: all ease-in-out 0.3s;
+    -webkit-transition: all ease-in-out 0.3s;
+    transition: all ease-in-out 0.3s; }
+body .color-picker-wrap.visible-color-wrap {
+    left: 0; }
+body .col-trigger {
+    background: #288feb;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    position: absolute;
+    right: -40px;
+    text-align: center;
+    top: 14px;
+    width: 40px;
+}
+
+
+/*picker color---end*/
