--- a/views/resume/resume001.html
+++ b/views/resume/resume001.html
@@ -7,19 +7,13 @@
     <meta name="description" content="'即刻简历'旨在网络便捷时代提供更多个性化、更能表达自我才能的无纸化简历制作。简历作为众多求职者职业生涯中不可或缺的一部分,求职过程中除却求职者本身的能力之外,一份有创意及个性的简历亦能展现求职者对这份工作的用心和重视程度,在'即刻'所有简历均为免费制作,当然您也可以选择更加展现自我的个性化定制制作,执笔之间,难掩才华。">
     <meta name="msapplication-tap-highlight" content="yes" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
+    <!--require start-->
     <!-- Favicon -->
     <link rel="icon" type="image/ico" href="../../static/img/logo/logoPic.png">
     <!-- Web Font -->
     <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--  Bootstrap 3-->
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <!-- OWL Carousel -->
-    <link rel="stylesheet" href="../../static/resume/resume001/css/owl.carousel.css">
-    <link rel="stylesheet" href="../../static/resume/resume001/css/owl.theme.css">
-    <link href="../../static/resume/resume001/css/magnific-popup.css" rel="stylesheet">
-    <link href="../../static/resume/resume001/css/style.css" rel="stylesheet">
-    <link href="../../static/resume/resume001/css/responsive.css" rel="stylesheet">
-    <!--require start-->
     <link rel="stylesheet" href="../../static/css/util.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.css">
     <script src="../../static/plugins/sweetalert/sweetalert.min.js"></script>
@@ -27,6 +21,13 @@
     <link href="https://cdn.bootcss.com/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/bootstrap-slider/10.2.1/css/bootstrap-slider.min.css" rel="stylesheet">
     <!--require end-->
+
+    <!-- OWL Carousel -->
+    <link rel="stylesheet" href="../../static/resume/resume001/css/owl.carousel.css">
+    <link rel="stylesheet" href="../../static/resume/resume001/css/owl.theme.css">
+    <link href="../../static/resume/resume001/css/magnific-popup.css" rel="stylesheet">
+    <link href="../../static/resume/resume001/css/style.css" rel="stylesheet">
+    <link href="../../static/resume/resume001/css/responsive.css" rel="stylesheet">
     <style>
         input:focus{
             outline: 0 !important;
@@ -56,13 +57,16 @@
         <div class="loaderTxt">数据交互中...</div>
     </div>
 </div>
-<!--PRELOADER-->
-<div id="preloader">
-    <div id="status">
-        <img alt="logo" src="../../static/img/logo/logoPic.png">
+<div id="pageLoading" class="loading-wrap" style="display: block;height:100%;position:fixed;">
+    <div class="loader" >
+        <div class="la-fire la-3x">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="loaderTxt">页面渲染中...</div>
     </div>
 </div>
-<!--/.PRELOADER END-->
 
 <!--HEADER -->
 <div class="header">
@@ -89,10 +93,10 @@
                     工作经历
                 </a>
                 <a data="skill" href="javascript:animate('skill')">
-                    所有技能
+                    专业技能
                 </a>
                 <a data="education" href="javascript:animate('education')">
-                    教育经历
+                    教育背景
                 </a>
                 <a data="testimonial" href="javascript:animate('testimonial')">
                     人生箴言
@@ -191,7 +195,7 @@
                             <td><span id="showHobby">爱好运动，喜欢踢足球，和打篮球。 爱好摄影，有一定的摄影技术， 闲暇时候喜欢看书，充实自己。</span></td>
                         </tr>
                         <tr>
-                            <td class="title">荣誉证书</td>
+                            <td class="title">奖项荣誉</td>
                             <td class="break">:</td>
                             <td><span id="showHonor">大学英语四级，良好的听说读写能力，国家计算机一级熟练使用office办公软件，通过会计从业资格证。</span></td>
                         </tr>
@@ -332,7 +336,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <h3 class="title-small">
-                            <span>所有技能</span>
+                            <span>专业技能</span>
                         </h3>
                         <p class="content-detail">
                             All skills
@@ -395,7 +399,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <h3 class="title-small">
-                            <span>教育经历</span>
+                            <span>教育背景</span>
                         </h3>
                         <p class="content-detail">Educational experience</p>
                     </div>
@@ -661,9 +665,9 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-3 control-label form-label">荣誉证书<span class="red"></span></label>
+                            <label class="col-sm-3 control-label form-label">奖项荣誉<span class="red"></span></label>
                             <div class="col-sm-8">
-                                <input class="form-control" id="honor" type="text" placeholder="荣誉证书" />
+                                <input class="form-control" id="honor" type="text" placeholder="奖项荣誉" />
                             </div>
                         </div>
 
@@ -810,18 +814,26 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<!--设计按钮-->
-<a href="javascript:void(0)" class="scroll-top" style="bottom: 80px;" id="design"><img style="width: 24px;margin-top: -10px;" src="../../static/img/design.png"></a>
-
 <!--二维码-->
 <a href="javascript:void(0)" class="scroll-top" style="bottom: 80px;display: none" id="qrcodeBtn"><i class="fa fa-qrcode" aria-hidden="true"></i></a>
+
+<!--设计按钮-->
+<a href="javascript:void(0)" class="scroll-top" style="bottom: 80px;" id="design"><img style="width: 24px;margin-top: -10px;" src="../../static/img/design.png"></a>
 
 <!--返回顶部-->
 <a href="javascript:void(0)" class="scroll-top" id="scroll-top"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
 
-
+<!--require start-->
 <script src="https://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="../../static/js/util.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap-slider/10.2.1/bootstrap-slider.min.js"></script>
+<script src="../../static/plugins/citySelect/distpicker.data.js"></script>
+<script src="../../static/plugins/citySelect/distpicker.js"></script>
+<script src="../../static/plugins/qrcode/qrcode.min.js"></script>
+<script src="../../static/js/resume.js"></script>
+<!--require end-->
+
 <script src="../../static/resume/resume001/js/jquery.appear.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/classie.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/owl.carousel.min.js" type="text/javascript"></script>
@@ -831,14 +843,6 @@
 <script src="../../static/resume/resume001/js/smooth-scroll.min.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/typed.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/main.js" type="text/javascript"></script>
-<!--require start-->
-<script src="../../static/js/util.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap-slider/10.2.1/bootstrap-slider.min.js"></script>
-<script src="../../static/plugins/citySelect/distpicker.data.js"></script>
-<script src="../../static/plugins/citySelect/distpicker.js"></script>
-<script src="../../static/plugins/qrcode/qrcode.min.js"></script>
-<script src="../../static/js/resume.js"></script>
-<!--require end-->
 <script>
     var localData,dbData;
     $(function () {
@@ -879,7 +883,150 @@
         },500);
 
     });
+    function renderHtml() {
+        //隐藏关闭按钮
+        $('#modalClose').hide();
+        $(".typed").hide();
+        $(".typed_").typed({//渲染打印效果
+            strings: ["我的名字是"+resume.Name, "我是一名"+resume.Objective,"来自"+resume.Province+'-'+resume.City, "🙂"],
+            typeSpeed: 100,
+            backDelay: 900,
+            loop: true
+        });
+        var str = "暂未填写";
+        $('#showName').html(resume.Name);
+        $("#showObjective").html(resume.Objective);
+        $("#showGender").html(resume.Gender);
+        if(resume.Gender==="女"){
+            $('.bg-about').css("background","url(../../static/resume/resume001/images/about/about01_.jpg)");
+            $('.bg-about').css("background-size","cover");
+            $('.bg-about').css("background-repeat","no-repeat");
+        }
+        $("#showBirthday").html(resume.Birthday);
+        $("#showPhone").html(resume.Phone);
+        $('#showEmail').html(resume.Email);
+        if(!resume.Home){
+            $('#showHome').html(str);
+        }else{
+            $('#showHome').html(resume.Home);
+        }
+        if(!resume.Address){
+            $('#showAddress').html(str);
+        }else{
+            $('#showAddress').html(resume.Address);
+        }
+        if(!resume.Hobby){
+            $('#showHobby').html(str);
+        }else{
+            $('#showHobby').html(resume.Hobby);
+        }
+        if(!resume.Honor){
+            $('#showHonor').html("-");
+        }else{
+            $('#showHonor').html(resume.Honor);
+        }
+        $('#showIntroduce').html(resume.Introduce);
+        var works = resume.Works;
+        if(typeof works==="string"&&works){
+            works = JSON.parse(works);
+        }
+        //works = works.reverse();
+        $('.showWorkWrap').html("");
+        for(var i=0;i<works.length;i++){
+            var obj = works[i];
+            var start = obj.start;
+            var end = obj.end;
+            var date = start+" 至 "+end;
+            var company = obj.company;
+            var position = obj.position;
+            var description = obj.description.replace(/\n/g,'<br/>');
+            if(!description){
+                description = "暂未填写";
+            }
+            $(".showWorkWrap").append('<li>\n' +
+                    '                                    <div class="col-md-6 col-sm-6">\n' +
+                    '                                        <div class="wrap-card">\n' +
+                    '                                            <div class="card">\n' +
+                    '                                                <h2 class="company">'+company+
+                    '                                                </h2>\n' +
+                    '                                                <p class="job">\n' +position+
+                    '                                                </p>\n' +
+                    '                                                <p class="year">\n' +date+
+                    '                                                </p>\n' +
+                    '                                                <hr>\n' +
+                    '                                                <div class="text-detail">\n' +
+                    '                                                    <p>\n' +description+
+                    '                                                    </p>\n' +
+                    '                                                </div>\n' +
+                    '                                            </div>\n' +
+                    '                                        </div>\n' +
+                    '                                    </div>\n' +
+                    '                                </li>');
+        }
 
+        var skills = resume.Skills;
+        if(typeof skills==="string"&&skills){
+            skills = JSON.parse(skills);
+        }
+        $('.showSkillWrap').html("");
+        for(var i=0;i<skills.length;i++){
+            var obj = skills[i];
+            var skillName = obj.name;
+            var num = obj.num;
+            $('.showSkillWrap').append('<div class="skillbar" data-percent="'+num+'%">\n' +
+                    '                                <div class="title head-sm">\n' +skillName+
+                    '                                </div>\n' +
+                    '                                <div class="count-bar">\n' +
+                    '                                    <div class="count"></div>\n' +
+                    '                                </div>\n' +
+                    '                            </div>');
+        }
+        //Skill
+        jQuery('.skillbar').each(function() {
+            jQuery(this).appear(function() {
+                jQuery(this).find('.count-bar').animate({
+                    width:jQuery(this).attr('data-percent')
+                },3000);
+                var percent = jQuery(this).attr('data-percent');
+                jQuery(this).find('.count').html('<span>' + percent + '</span>');
+            });
+        });
+
+        var edus = resume.Educations;
+        if(typeof edus==="string"&&edus){
+            edus = JSON.parse(edus);
+        }
+        //edus = edus.reverse();
+        $('.showEduWrap').html("");
+        for(var i=0;i<edus.length;i++){
+            var obj = edus[i];
+            var start = obj.start;
+            var end = obj.end;
+            var date = start+" 至 "+end;
+            var school = obj.school;
+            var description = obj.description.replace(/\n/g,'<br/>');
+            if(!description){
+                description = "暂未填写";
+            }
+            $(".showEduWrap").append('<li>\n' +
+                    '                                    <div class="col-md-6 col-sm-6">\n' +
+                    '                                        <div class="wrap-card">\n' +
+                    '                                            <div class="card">\n' +
+                    '                                                <h2 class="company">'+school+
+                    '                                                </h2>\n'+
+                    '                                                <p class="year">\n' +date+
+                    '                                                </p>\n' +
+                    '                                                <hr>\n' +
+                    '                                                <div class="text-detail">\n' +
+                    '                                                    <p>\n' +description+
+                    '                                                    </p>\n' +
+                    '                                                </div>\n' +
+                    '                                            </div>\n' +
+                    '                                        </div>\n' +
+                    '                                    </div>\n' +
+                    '                                </li>');
+        }
+    }
 </script>
 
 </body>
